tests/negative/LetMissingClause.juvix
module LetMissingClause;
  id : {A : Type} → A → A;
  id {A} := let {
      id' : A → A;
    } in id';
end;
